fix: resolve alignment issue in slate box

--- a/theme/globals/blocks.less
+++ b/theme/globals/blocks.less
@@ -94,6 +94,14 @@
   padding-left: 1rem;
 }
 
+// Fix alignment issue in slate box
+.sidebar-container {
+  .slate_wysiwyg_box {
+    display: grid;
+    align-items: center;
+  }
+}
+
 /* Tabs block */
 .cca-main-homepage .tabs-block {
   .ui.menu.vertical .item,
